--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,7 +116,10 @@ target_sources(
 	${include}/lighthouse/geometry.ixx
 	${include}/lighthouse/renderer/material.ixx
 	${include}/lighthouse/renderer/vulkan/descriptor_resource_buffer.ixx
- "include/lighthouse/renderer/vulkan/dynamic_rendering_state.ixx")
+	${include}/lighthouse/renderer/vulkan/dynamic_rendering_state.ixx
+	${include}/lighthouse/renderer/color.ixx
+	${include}/lighthouse/renderer/light.ixx
+)
 
 target_sources(
 	${PROJECT_NAME} PUBLIC
@@ -142,14 +145,12 @@ target_sources(
 	${source}/lighthouse/renderer/vulkan/queue.cpp
 	${source}/lighthouse/renderer/vulkan/image.cpp
 	${source}/lighthouse/renderer/vulkan/swapchain.cpp
-	
 	${source}/lighthouse/renderer/vulkan/buffer.cpp
 	${source}/lighthouse/renderer/vulkan/sampler.cpp
 	${source}/lighthouse/renderer/vulkan/descriptor_buffer.cpp
 	${source}/lighthouse/renderer/vulkan/spir_v.cpp
 	${source}/lighthouse/renderer/vulkan/shader_object.cpp
 	${source}/lighthouse/renderer/vulkan/vertex_buffer.cpp
-	
 	${source}/lighthouse/renderer/scene_loader.cpp
 	${source}/lighthouse/renderer/vulkan/pipeline_resource_generator.cpp
 	${source}/lighthouse/renderer/vulkan/shader_input.cpp
@@ -165,7 +166,11 @@ target_sources(
 	${source}/lighthouse/renderer/vulkan/texture.cpp
 	${source}/lighthouse/renderer/vulkan/global_descriptor.cpp
 	${source}/lighthouse/renderer/material.cpp
- "source/lighthouse/renderer/vulkan/descriptor_resource_buffer.cpp" "source/lighthouse/renderer/vulkan/dynamic_rendering_state.cpp")
+	${source}/lighthouse/renderer/vulkan/descriptor_resource_buffer.cpp
+	${source}/lighthouse/renderer/vulkan/dynamic_rendering_state.cpp
+	${source}/lighthouse/renderer/color.cpp
+	${source}/lighthouse/renderer/light.cpp
+)
 
 #STRING (REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_RELEASE}")
 #STRING (REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}")
