--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ target_compile_options(vulkan_module PUBLIC
 	${compile_options}
 	/DVULKAN_HPP_FLAGS_MASK_TYPE_AS_PUBLIC
 	/DVULKAN_HPP_NO_NODISCARD_WARNINGS
+	/DVK_USE_PLATFORM_WIN32_KHR
 	/DVULKAN_HPP_NO_SPACESHIP_OPERATOR
 	/DVULKAN_HPP_NO_TO_STRING
 )
