--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -234,7 +234,7 @@ target_sources(
 	${source}/lighthouse/renderer/skybox.cpp
 	${source}/lighthouse/renderer/dear_imgui.cpp
 	${source}/lighthouse/renderer/user_interface.cpp
- "source/lighthouse/physical_property.cpp")
+ "source/lighthouse/physical_property.cpp" "source/lighthouse/geometry.cpp")
 
 #STRING (REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_RELEASE}")
 #STRING (REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}")
