--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,7 +178,7 @@ target_sources(
 	${include}/lighthouse/renderer/light.ixx
 	${include}/lighthouse/renderer/skybox.ixx
 	${include}/lighthouse/renderer/vulkan/image_view.ixx
-	${include}/lighthouse/renderer/default_meshes.ixx
+	"include/lighthouse/renderer/mesh_registry.ixx"
 	${include}/lighthouse/renderer/dear_imgui.ixx
 	${include}/lighthouse/renderer/user_interface.ixx
 	${include}/lighthouse/physical_property.ixx
@@ -236,7 +236,7 @@ target_sources(
 	${source}/lighthouse/renderer/color.cpp
 	${source}/lighthouse/renderer/light.cpp
 	${source}/lighthouse/renderer/vulkan/image_view.cpp
-	${source}/lighthouse/renderer/default_meshes.cpp
+	"source/lighthouse/renderer/mesh_registry.cpp"
 	${source}/lighthouse/renderer/skybox.cpp
 	${source}/lighthouse/renderer/dear_imgui.cpp
 	${source}/lighthouse/renderer/user_interface.cpp
